# MinecraftCPP

./: .gitignore  CMakeLists.txt  README.md
api/SDL2/: sdl2-config.cmake
src/assets/shaders/basic/: shader.frag
src/assets/shaders/hitbox/: shader.frag  shader.vert
src/assets/shaders/particle/: shader.frag  shader.vert
src/assets/shaders/skybox/: shader.frag  shader.vert
src/assets/shaders/textures/: shader.frag  shader.vert
src/assets/shaders/ui/: shader.frag  shader.vert
src/core/: game_state_manager.cpp  minecraft.cpp  playground.cpp
src/core/components/: box_collider.cpp  chunk.cpp  chunk_aabb.cpp  chunk_mesh.cpp  frustum_aabb.cpp  particle.cpp  particle_emitter.cpp  rigid_body.cpp  transform.cpp
src/core/components/include/: box_collider.h  chunk.h  chunk_aabb.h  chunk_mesh.h  frustum_aabb.h  mesh.h  particle.h  particle_emitter.h  player_controller.h  rigid_body.h  transform.h
src/core/data/: asset_manager.cpp  assets.cpp  chunk.cpp  chunk_mesh.cpp  cube.cpp  cube_data_base.cpp  cubes_db.cpp  data_system.cpp  entity.cpp  hit_box.cpp  skybox.cpp  world.cpp
src/core/data/cubes/: dirt_cube.cpp  grass_cube.cpp
src/core/data/gameObjects/: player.cpp
src/core/data/include/: asset_manager.h  assets.h  chunk.h  chunk_mesh.h  cube.h  cube_data.h  cube_data_base.h  cube_type.h  cubes_db.h  data_system.h  entity.h  hit_box.h  skybox.h  world.h
src/core/data/prefabs/: cactus_prefab.cpp  prefab.cpp  tree_prefab.cpp
src/core/data/terrain/: biome.cpp  chunk.cpp  chunk_mesh.cpp  cube.cpp  cube_data_base.cpp
src/core/events/: chunk_regeneration_event.h  chunks_packed.h  cube_destroyed_event.h
src/core/graphics/: chunk_renderer.cpp  cube_renderer.cpp  graphics_system.cpp  skybox_renderer.cpp  world_renderer.cpp
src/core/graphics/include/: chunk_renderer.h  cube_renderer.h  graphics_system.h  skybox_renderer.h  world_renderer.h
src/core/graphics/screens/: abstract_screen.cpp  playing_screen.cpp
src/core/include/: game_state_manager.h  minecraft.h  playground.h
src/core/logic/: chunk_mesh_generation.cpp  logic_system.cpp  mod_event_handler.cpp  mod_logic.cpp  mod_world_exploration.cpp  world_generation.cpp
src/core/logic/events/: chunk_ticket_event.cpp  event.cpp
src/core/logic/include/: chunk_mesh_generation.h  logic_system.h  mod_event_handler.h  mod_logic.h  mod_world_exploration.h  world_generation.h
src/core/objects/: color_object.cpp  object.cpp  object_loader.cpp  texture_object.cpp  triangle.cpp
src/core/objects/include/: color_object.h  object.h  object_loader.h  texture_object.h  triangle.h
src/core/systems/: chunk_renderer.cpp  debug_system.cpp  particle_system.cpp  physics_system.cpp  player_system.cpp  render_system.cpp  terrain_system.cpp  transform_system.cpp  world_generation.cpp  world_meshing.cpp
src/core/systems/include/: chunk_renderer.h  debug_system.h  particle_system.h  physics_system.h  player_system.h  render_system.h  terrain_system.h  transform_system.h  world_generation.h  world_meshing.h
src/core/tests/: viewport_test.cpp
src/core/tests/include/: viewport_test.h
src/desktop/: desktop_launcher.cpp
src/lib/: application.cpp  audio.cpp  configuration.cpp  graphics.cpp  input.cpp  lib.cpp  logger.cpp
src/lib/entityx/: Entity.cc  Entity.h  Event.h  System.cc  System.h  entityx.h  quick.h
src/lib/entityx/help/: Pool.h
src/lib/entityx/tags/: TagsComponent.h
src/lib/include/: application.h  audio.h  configuration.h  graphics.h  input.h  lib.h  listener.h  logger.h
src/lib/utils/: animation.cpp  atlas_region.cpp  camera.cpp  first_person_camera_controller.cpp  gl_texture.cpp  input_processor.cpp  music.cpp  orthographic_camera.cpp  perspective_camera.cpp  random_generator.cpp  shaders.cpp  sound.cpp  sprite_batch.cpp  texture.cpp  texture_atlas.cpp  texture_cube_map.cpp  texture_region.cpp  universal_viewport.cpp  viewport.cpp
src/lib/utils/camera/: camera.cpp  first_person_camera_controller.cpp  frustum.cpp  orthographic_camera.cpp  perspective_camera.cpp
src/lib/utils/geometry/: ray.cpp  voxel_ray.cpp
src/lib/utils/include/: animation.h  atlas_region.h  camera.h  first_person_camera_controller.h  gl_texture.h  input_processor.h  music.h  orthographic_camera.h  perspective_camera.h  random_generator.h  shaders.h  sound.h  sprite_batch.h  texture.h  texture_atlas.h  texture_cube_map.h  texture_region.h  universal_viewport.h  viewport.h
src/lib/utils/math/: math_utils.cpp
src/lib/utils/noise/: basictypes.h  exception.h  interp.h  latlon.cpp  latlon.h  mathconsts.h  misc.h  noise.h  noisegen.cpp  noisegen.h  vectortable.h
src/lib/utils/openGL/: index_buffer.cpp  particle_vertex.cpp  vertex.cpp  vertex_array.cpp  vertex_buffer.cpp
(+128 files in other folders)
